--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,6 @@
   "homepage": "https://github.com/chadeddington/angular-seed-lite",
   "dependencies": {
     "angular": "~1.4.0",
-    "angular-route": "~1.4.0",
+    "angular-route": "~1.4.0"
   }
 }
