--- a/package.json
+++ b/package.json
@@ -5,13 +5,11 @@
   "repository": "https://github.com/chadeddington/angular-seed-lite",
   "devDependencies": {
     "bower": "^1.3.1",
-    "http-server": "^0.6.1",
+    "http-server": "^0.6.1"
   },
   "scripts": {
     "postinstall": "bower install",
-
     "prestart": "npm install",
-    "start": "http-server -a localhost -p 8000 -c-1",
-
+    "start": "http-server -a localhost -p 8000 -c-1"
   }
 }
